--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
 
+    <string name="btn_generate_post">Generate Post</string>
+
 </resources>
